added: convert to pdf

--- a/EBauelemente/Notebooks/Aufg2.ipynb
+++ b/EBauelemente/Notebooks/Aufg2.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"Aufg2.csv\")\n",
+    "data = pd.read_csv(\"../Data/Aufg2.csv\")\n",
+    "PLOTS = \"../Plots\"\n",
     "sns.set_style(\"whitegrid\")"
    ]
   },
@@ -30,7 +31,7 @@
     "p = sns.barplot(x=\"Element\", y=\"U/V\", data=data)\n",
     "for item in p.get_xticklabels():\n",
     "    item.set_rotation(45)\n",
-    "plt.savefig(\"Aufg2_plot\", dpi=300)"
+    "plt.savefig(\"../Plots/Aufg2_plot\", dpi=300)"
    ]
   },
   {
