--- a/EBauelemente/Notebooks/supra.ipynb
+++ b/EBauelemente/Notebooks/supra.ipynb
@@ -2,80 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>T/K</th>\n",
-       "      <th>I/mA</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.170</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-5.0</td>\n",
-       "      <td>0.166</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-10.0</td>\n",
-       "      <td>0.164</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>-15.0</td>\n",
-       "      <td>0.162</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-20.0</td>\n",
-       "      <td>0.160</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    T/K   I/mA\n",
-       "0   0.0  0.170\n",
-       "1  -5.0  0.166\n",
-       "2 -10.0  0.164\n",
-       "3 -15.0  0.162\n",
-       "4 -20.0  0.160"
-      ]
+      "text/plain": "    T/K   I/mA\n0   0.0  0.170\n1  -5.0  0.166\n2 -10.0  0.164\n3 -15.0  0.162\n4 -20.0  0.160",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>T/K</th>\n      <th>I/mA</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.0</td>\n      <td>0.170</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>-5.0</td>\n      <td>0.166</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>-10.0</td>\n      <td>0.164</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>-15.0</td>\n      <td>0.162</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>-20.0</td>\n      <td>0.160</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 26,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 1
     }
    ],
    "source": [
-    "data = pd.read_csv(\"Supra.csv\")\n",
+    "data = pd.read_csv(\"../Data/Supra.csv\")\n",
     "sns.set_style(\"whitegrid\")\n",
     "data = data.astype('float')\n",
     "data.head()"
@@ -110,7 +51,7 @@
     "p = sns.scatterplot(x=\"T/K\", y=\"I/mA\", data=data)\n",
     "for item in p.get_xticklabels():\n",
     "    item.set_rotation(45)\n",
-    "plt.savefig(\"Supra_plot\", dpi=300)"
+    "plt.savefig(\"../Plots/Supra_plot\", dpi=300)"
    ]
   },
   {
@@ -137,7 +78,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5-final"
   }
  },
  "nbformat": 4,
